# TunaDex-v2.0.0

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  SETUP.md  SKILL.md  doppler.yaml  firebase.json  firestore.rules  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.claude/skills/skillli/: SKILL.md  skillli.json
.github/workflows/: ci.yml  daily_trawl.yml
apps_script/: EmailRelay.gs
claude_task/: CLAUDE.md  run_daily.bat  run_daily.sh
registry/: index.json
scripts/: doppler-import.sh  doppler-setup.sh  dry_run.py  seed-index.mjs  setup.py
src/tunadex/: __init__.py  __main__.py  cli.py  config.py
src/tunadex/anomaly/: __init__.py  detector.py
src/tunadex/auth/: __init__.py  credentials.py  oauth.py
src/tunadex/dashboard/: app.py
src/tunadex/email/: __init__.py  attachments.py  parser.py  sheet_trawler.py  trawler.py
src/tunadex/extraction/: __init__.py  gemini_extractor.py  prompts.py  schema.py
src/tunadex/reports/: __init__.py  daily.py  html_generator.py  monthly.py  weekly.py
src/tunadex/storage/: __init__.py  drive.py  local.py  sheets.py
templates/: daily_report.html  monthly_report.html  weekly_report.html
test/core/: dogfood.test.ts
test/fixtures/: sample-index.json
